tooltip/scrollbar/orderbook fix

--- a/css/style.css
+++ b/css/style.css
@@ -850,10 +850,11 @@ form {
 	width:100%;
 	padding-right:10px;
 	padding-left:10px;
-	height:calc(100%);
 }
 
 #sellBook > .twrap {
+	height:auto;
+	max-height:100%;
 	bottom:0px;
 }
 
